src/objects/Account_Address__c/Account_Address__c.object-meta.xml
<CustomObject>
    <description>Account Address</description>
    <label>Account Address</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>SFDC Row ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Address</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>