src/objects/Account_Address__c/fields/Account_Address_Line2__c.field-meta.xml
<CustomField>
    <fullName>Account_Address_Line2__c</fullName>
    <formula>Upper( Report_Address_Line_2__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Line2</label>
    <type>Text</type>
</CustomField>