src/objects/Account_Address__c/fields/Account_Address_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Address_State_Code__c</fullName>
    <formula>upper(text(Report_State_Code__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address State Code</label>
    <type>Text</type>
</CustomField>