src/objects/Account_Address__c/fields/Account_Back_Track_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Back_Track_Number__c</fullName>
    <description>Added on demand (by Dieter for data migration)</description>
    <label>Account Back Track Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>