src/objects/Account_Address__c/fields/Account_City_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_City_Name__c</fullName>
    <formula>UPPER( Report_City_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address City Name</label>
    <type>Text</type>
</CustomField>