src/objects/Account_Address__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <label>Account Name</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2 AND 3) OR 4</booleanFilter>
        <filterItems>
            <field>Account.Customer_Status__c</field>
            <operation>notEqual</operation>
            <value>Inactive</value>
        </filterItems>
        <filterItems>
            <field>Account.Report_Account_Name_upper__c</field>
            <operation>notContain</operation>
            <value>VARIOUS</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>notContain</operation>
            <value>Admin</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>contains</operation>
            <value>Admin</value>
        </filterItems>
        <infoMessage>Account Status should not be inactive and Account Name should not contain &quot;Various&quot;</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Address</relationshipLabel>
    <relationshipName>Account_Address</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>