src/objects/Account_Address__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This filed was added on demand ( by Dieter for data migration)</description>
    <label>Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Address</relationshipName>
    <type>Lookup</type>
</CustomField>