src/objects/Account_Address__c/fields/AccountNameFormula__c.field-meta.xml
<CustomField>
    <fullName>AccountNameFormula__c</fullName>
    <formula>Account_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name Formula</label>
    <type>Text</type>
</CustomField>