src/objects/Account_Address__c/fields/AccountOwner_Email__c.field-meta.xml
<CustomField>
    <fullName>AccountOwner_Email__c</fullName>
    <label>Account Owner Email</label>
    <type>Email</type>
</CustomField>