src/objects/Account_Address__c/fields/AccountStatus__c.field-meta.xml
<CustomField>
    <fullName>AccountStatus__c</fullName>
    <formula>TEXT(Account_Name__r.Customer_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Status</label>
    <type>Text</type>
</CustomField>