src/objects/Account_Address__c/fields/Address_Fax__c.field-meta.xml
<CustomField>
    <fullName>Address_Fax__c</fullName>
    <label>Address Fax</label>
    <type>Phone</type>
</CustomField>