src/objects/Account_Address__c/fields/Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_3__c</fullName>
    <formula>UPPER( Report_Address_Line_3__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Line 3</label>
    <type>Text</type>
</CustomField>