src/objects/Account_Address__c/fields/Address_LineFormulae1__c.field-meta.xml
<CustomField>
    <fullName>Address_LineFormulae1__c</fullName>
    <formula>UPPER( Report_Address_Line_1__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Line1</label>
    <type>Text</type>
</CustomField>