src/objects/Account_Address__c/fields/Address_Name__c.field-meta.xml
<CustomField>
    <fullName>Address_Name__c</fullName>
    <formula>Address_LineFormulae1__c&amp;&apos; &apos;&amp; Account_City_Name__c&amp;&apos; &apos;&amp; Account_Address_State_Code__c&amp;&apos; &apos;&amp; Country_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Name</label>
    <type>Text</type>
</CustomField>