src/objects/Account_Address__c/fields/Address_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Address_Postal_Code__c</fullName>
    <formula>upper( Report_Postal_Code__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Postal Code</label>
    <type>Text</type>
</CustomField>