src/objects/Account_Address__c/fields/Address_Status__c.field-meta.xml
<CustomField>
    <fullName>Address_Status__c</fullName>
    <label>Address Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>