src/objects/Account_Address__c/fields/Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Address_Type__c</fullName>
    <label>Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>D&amp;B</fullName>
            </value>
            <value>
                <fullName>Hangar</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>