src/objects/Account_Address__c/fields/Address_Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Address_Work_Phone__c</fullName>
    <label>Address Work Phone</label>
    <type>Phone</type>
</CustomField>