src/objects/Account_Address__c/fields/Authorized_Avionics_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Avionics_Dealer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Create for BGA Mobile Directory App</description>
    <label>Authorized Avionics Dealer</label>
    <type>Checkbox</type>
</CustomField>