src/objects/Account_Address__c/fields/Authorized_Mechanical_Service_Center__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Mechanical_Service_Center__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for the BGA Mobile Directory App</description>
    <label>Authorized Mechanical Service Center</label>
    <type>Checkbox</type>
</CustomField>