src/objects/Account_Address__c/fields/Avionics_Support_Level__c.field-meta.xml
<CustomField>
    <fullName>Avionics_Support_Level__c</fullName>
    <description>Created for BGA Mobile Directory App. Same field as Avionics Dealer Type</description>
    <label>Avionics Support Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Avionic Sales and Installation</fullName>
            </value>
            <value>
                <fullName>Avionic Sales, Installation and Repair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>