src/objects/Account_Address__c/fields/BGAMob_Address_1__c.field-meta.xml
<CustomField>
    <fullName>BGAMob_Address_1__c</fullName>
    <description>Created for BGA Mobile Directory App</description>
    <label>BGAMob Address 1</label>
    <length>150</length>
    <type>Text</type>
</CustomField>