src/objects/Account_Address__c/fields/BGAMob_Address_3__c.field-meta.xml
<CustomField>
    <fullName>BGAMob_Address_3__c</fullName>
    <description>Created for BGA Mobile Directory App</description>
    <label>BGAMob Address 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>