src/objects/Account_Address__c/fields/BGAMob_City_Name__c.field-meta.xml
<CustomField>
    <fullName>BGAMob_City_Name__c</fullName>
    <description>Created for BGA Mobile Directory</description>
    <label>BGAMob City Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>