src/objects/Account_Address__c/fields/BGAMob_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>BGAMob_Contact_Email__c</fullName>
    <description>Created for BGA Mobile Directory</description>
    <label>BGAMob Contact Email</label>
    <type>Email</type>
</CustomField>