src/objects/Account_Address__c/fields/BGAMob_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>BGAMob_Contact_Name__c</fullName>
    <description>Created for BGA Mobile Directory App</description>
    <label>BGAMob Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>