src/objects/Account_Address__c/fields/BGAMob_Country_Nm__c.field-meta.xml
<CustomField>
    <fullName>BGAMob_Country_Nm__c</fullName>
    <description>Created for BGA Mobile App</description>
    <label>BGAMob Country Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>