src/objects/Account_Address__c/fields/BGAMob_Customer_Phone__c.field-meta.xml
<CustomField>
    <fullName>BGAMob_Customer_Phone__c</fullName>
    <description>Created for BGA Mobile Directory App</description>
    <label>BGAMob Customer Phone</label>
    <type>Phone</type>
</CustomField>