src/objects/Account_Address__c/fields/BGAMob_Geo_Code__c.field-meta.xml
<CustomField>
    <fullName>BGAMob_Geo_Code__c</fullName>
    <description>Created for BGA Mobile Directory App</description>
    <label>BGAMob_Geo_Code</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>