src/objects/Account_Address__c/fields/BGAMob_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>BGAMob_Postal_Code__c</fullName>
    <description>Created for BGA Mobile Directory App</description>
    <label>BGAMob Postal Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>