src/objects/Account_Address__c/fields/BGAMob_State_Province__c.field-meta.xml
<CustomField>
    <fullName>BGAMob_State_Province__c</fullName>
    <description>Created for BGA Mobile Directory App</description>
    <label>BGAMob State/Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>