src/objects/Account_Address__c/fields/BGAMob_Website__c.field-meta.xml
<CustomField>
    <fullName>BGAMob_Website__c</fullName>
    <description>Created for BGA Mobile Directory App</description>
    <label>BGAMob Website</label>
    <type>Url</type>
</CustomField>