src/objects/Account_Address__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <formula>upper( text(Report_Country_Codes__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Country Code</label>
    <type>Text</type>
</CustomField>