src/objects/Account_Address__c/fields/Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Country_Name__c</fullName>
    <formula>upper(text(Report_Country_Name__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Country Name</label>
    <type>Text</type>
</CustomField>