src/objects/Account_Address__c/fields/Country_State__c.field-meta.xml
<CustomField>
    <fullName>Country_State__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country State</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Country_States__c.Country__c</field>
            <operation>equals</operation>
            <valueField>$Source.Address_Country__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Country_States__c</referenceTo>
    <relationshipLabel>Account Address</relationshipLabel>
    <relationshipName>Account_Address</relationshipName>
    <type>Lookup</type>
</CustomField>