src/objects/Account_Address__c/fields/Dealer_Tech_Pub_Categorization__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Tech_Pub_Categorization__c</fullName>
    <label>Dealer Tech Pub Categorization</label>
    <type>TextArea</type>
</CustomField>