src/objects/Account_Address__c/fields/Denied_Party_Status__c.field-meta.xml
<CustomField>
    <fullName>Denied_Party_Status__c</fullName>
    <label>Denied Party Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Conditional Release</fullName>
            </value>
            <value>
                <fullName>Further Review Needed</fullName>
            </value>
            <value>
                <fullName>Not Reviewed</fullName>
                <default>true</default>
                <label>Not Reviewed</label>
            </value>
            <value>
                <fullName>Pending Block</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Whitelist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>