src/objects/Account_Address__c/fields/Distributor_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Sub_Category__c</fullName>
    <label>Distributor Product Lines</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HUMS / CBMS</fullName>
            </value>
            <value>
                <fullName>Microelectronics</fullName>
            </value>
            <value>
                <fullName>Accelerometers</fullName>
            </value>
            <value>
                <fullName>High Temp Electronics</fullName>
            </value>
            <value>
                <fullName>Precision Pressure</fullName>
            </value>
            <value>
                <fullName>Magnetic Sensors</fullName>
            </value>
            <value>
                <fullName>RF Microwave</fullName>
            </value>
            <value>
                <fullName>Thermal Switches</fullName>
            </value>
            <value>
                <fullName>Inertial Measurement Units</fullName>
            </value>
            <value>
                <fullName>Ring Laser Gyros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>