src/objects/Account_Address__c/fields/Engine_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Engine_Authorization__c</fullName>
    <description>Created for BGA Mobile App to capture the Specific Engine Platform services by the dealer or service center</description>
    <label>Engine Authorization</label>
    <length>100</length>
    <type>Text</type>
</CustomField>