src/objects/Account_Address__c/fields/Formula_Strategic_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Formula_Strategic_Business_Unit__c</fullName>
    <formula>TEXT(Account_Name__r.Strategic_Business_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula:Strategic Business Unit</label>
    <type>Text</type>
</CustomField>