src/objects/Account_Address__c/fields/GTA_Number__c.field-meta.xml
<CustomField>
    <fullName>GTA_Number__c</fullName>
    <label>GTA Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>