src/objects/Account_Address__c/fields/Is_Primary_Address__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary Address</label>
    <type>Checkbox</type>
</CustomField>