src/objects/Account_Address__c/fields/Mechanical_Product_Lines__c.field-meta.xml
<CustomField>
    <fullName>Mechanical_Product_Lines__c</fullName>
    <description>Created for BGA Mobile App</description>
    <label>Mechanical Product Lines</label>
    <type>TextArea</type>
</CustomField>