src/objects/Account_Address__c/fields/Mobile_App_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Mobile_App_Visibility__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for BGA Mobile Directory App. Will determine if account will be visible in the mobile app or not</description>
    <label>Mobile App Visibility</label>
    <type>Checkbox</type>
</CustomField>