src/objects/Account_Address__c/fields/Mobile_App_Visibility_Check__c.field-meta.xml
<CustomField>
    <fullName>Mobile_App_Visibility_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SR#425182</description>
    <label>Mobile App Visibility Check</label>
    <type>Checkbox</type>
</CustomField>