src/objects/Account_Address__c/fields/POC__c.field-meta.xml
<CustomField>
    <fullName>POC__c</fullName>
    <label>POC</label>
    <length>80</length>
    <type>Text</type>
</CustomField>