src/objects/Account_Address__c/fields/Rep_Locator_Products__c.field-meta.xml
<CustomField>
    <fullName>Rep_Locator_Products__c</fullName>
    <label>Rep Locator Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>APU 131-9</fullName>
            </value>
            <value>
                <fullName>APU 331-200/250</fullName>
            </value>
            <value>
                <fullName>APU 331-350</fullName>
            </value>
            <value>
                <fullName>APU 331-500/600</fullName>
            </value>
            <value>
                <fullName>APU 85 Series</fullName>
            </value>
            <value>
                <fullName>APU 95 Series</fullName>
            </value>
            <value>
                <fullName>APU F35 Power Thermal Management System</fullName>
            </value>
            <value>
                <fullName>APU HGT1700</fullName>
            </value>
            <value>
                <fullName>APU Large 36-200/16</fullName>
            </value>
            <value>
                <fullName>APU LRUs</fullName>
            </value>
            <value>
                <fullName>APU RE100</fullName>
            </value>
            <value>
                <fullName>APU RE220</fullName>
            </value>
            <value>
                <fullName>APU Small 36-150/155/100</fullName>
            </value>
            <value>
                <fullName>APU SPS</fullName>
            </value>
            <value>
                <fullName>Avionics</fullName>
            </value>
            <value>
                <fullName>AWARS Fuel Controls</fullName>
            </value>
            <value>
                <fullName>BendixKing</fullName>
            </value>
            <value>
                <fullName>CBM/HUMS</fullName>
            </value>
            <value>
                <fullName>Commercial Helicopter</fullName>
            </value>
            <value>
                <fullName>Engine AGT1500</fullName>
            </value>
            <value>
                <fullName>Engine ALF502/LF507</fullName>
            </value>
            <value>
                <fullName>Engine ATF</fullName>
            </value>
            <value>
                <fullName>Engine CFE</fullName>
            </value>
            <value>
                <fullName>Engine HTF7000</fullName>
            </value>
            <value>
                <fullName>Engine HTS900</fullName>
            </value>
            <value>
                <fullName>Engine LTS101</fullName>
            </value>
            <value>
                <fullName>Engine T53</fullName>
            </value>
            <value>
                <fullName>Engine T55</fullName>
            </value>
            <value>
                <fullName>Engine TFE 20/40/60</fullName>
            </value>
            <value>
                <fullName>Engine TFE731</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>