src/objects/Account_Address__c/fields/Rep_Locator_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Rep_Locator_Visibility__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by aero rep locator application.</description>
    <label>Rep Locator Visibility</label>
    <type>Checkbox</type>
</CustomField>