src/objects/Account_Address__c/fields/Report_Account_name__c.field-meta.xml
<CustomField>
    <fullName>Report_Account_name__c</fullName>
    <formula>Account_Name__r.Report_Account_Name_upper__c</formula>
    <label>Report Account name</label>
    <type>Text</type>
</CustomField>