src/objects/Account_Address__c/fields/Report_Account_Name_small__c.field-meta.xml
<CustomField>
    <fullName>Report_Account_Name_small__c</fullName>
    <description>SR#442809</description>
    <formula>Account_Name__r.REPORT_ACCOUNT_NAME__c</formula>
    <label>Report Account Name small</label>
    <type>Text</type>
</CustomField>