src/objects/Account_Address__c/fields/Report_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Report_Address_Line_1__c</fullName>
    <label>Report Address Line 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>