src/objects/Account_Address__c/fields/Report_City_Name__c.field-meta.xml
<CustomField>
    <fullName>Report_City_Name__c</fullName>
    <label>Report City Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>