src/objects/Account_Address__c/fields/Sbl_Account_Row_ID__c.field-meta.xml
<CustomField>
    <fullName>Sbl_Account_Row_ID__c</fullName>
    <label>Sbl  Account Row ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>