src/objects/Account_Address__c/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <label>Service Territory</label>
    <type>TextArea</type>
</CustomField>