src/objects/Account_Address__c/fields/Source_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Source_Created_Date__c</fullName>
    <description>BM 1/2/13 - Created for Services SFDC Interfaces Project. This field holds the date and time when the record was created in an external source. It will only have a value if the data originates outside of SFDC.</description>
    <inlineHelpText>This field holds the date and time when the record was created in an external source. It will only have a value if the data originates outside of SFDC.</inlineHelpText>
    <label>Source Created Date</label>
    <type>DateTime</type>
</CustomField>