src/objects/Account_Address__c/validationRules/Inactive_Channel_Partner.validationRule-meta.xml
<ValidationRule>
    <fullName>Inactive_Channel_Partner</fullName>
    <active>true</active>
    <errorConditionFormula>or(Rep_Locator_Visibility__c == true, Mobile_App_Visibility__c == true ) &amp;&amp; Channel_Partner_Address_Inactive__c == true &amp;&amp; ischanged(Channel_Partner_Address_Inactive__c)</errorConditionFormula>
    <errorDisplayField>Channel_Partner_Address_Inactive__c</errorDisplayField>
    <errorMessage>Before enabling Channel Partner Address Inactive flag please disable Rep Locator Visibility and Mobile App Visibility.</errorMessage>
</ValidationRule>