src/objects/Account_Address__c/validationRules/State_Code_and_Postal_Code_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>State_Code_and_Postal_Code_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
not CONTAINS( $Profile.Name, &quot;API&quot; ), 
not CONTAINS( $Profile.Name, &quot;Admin&quot; ), 
not CONTAINS( $Profile.Name, &quot;D&amp;S Sales Analyst&quot; ), 
OR(
ISPICKVAL(Report_Country_Name__c, &apos;USA&apos;), 
ISPICKVAL(Report_Country_Name__c, &apos;Canada&apos;)
),
OR(
ISPICKVAL(Report_State_Code__c, &apos;&apos;),
ISBLANK( Report_Postal_Code__c )
)
)</errorConditionFormula>
    <errorMessage>Report State Code and Report Postal Code fields are mandatory when creating an account address with either USA or Canada as Report Country Name</errorMessage>
</ValidationRule>