src/objects/Account_Address__c/listViews/Account_Locator.listView-meta.xml
<ListView>
    <fullName>Account_Locator</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>AccountStatus__c</columns>
    <columns>Site_Name__c</columns>
    <columns>Site_Id__c</columns>
    <columns>Report_Address_Line_1__c</columns>
    <columns>Report_City_Name__c</columns>
    <columns>Report_Country_Name__c</columns>
    <columns>Rep_Locator_Visibility__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Rep_Locator_Visibility__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Account Locator</label>
    <language>en_US</language>
</ListView>